# wicd

./: .gitignore  04-bytes-vs-strings-in-setup.py.patch  26-support_etc-network_scripts.patch  32-prefer_pkexec.patch  36-fix_wrongly_displayed_keybinding.patch  37-fix_IndexError_list_index_out_of_range.patch  40-initialize_wicd-gtk_wifi-on-off-button.patch  44-fix_wicd-curses_AttributeError_in_keypress-function.patch  45-update_systemd_service_file.patch  46-dhcpcd_is_now_dhcpcd5.patch  99-wicd-1.7.4-plamo-02.patch  INSTALL  MANIFEST.in  PlamoBuild.wicd-1.7.4  README.rst  pyproject.toml  setup.cfg  setup.py  wicd-1.7.4-plamo.patch
cli/: wicd-cli.py
curses/: configscript_curses.py  curses_misc.py  netentry_curses.py  prefs_curses.py  prefs_curses.py.bak  wicd-curses.py  wicd-curses.py.bak  wicd-curses.py.bak2
data/: wicd.ui
docs/developer/: conf.py  index.rst  python3.rst  testing.rst
encryption/templates/: wpa-peap  wpa-peap-wo-domain  wpa2  wpa2-peap-wo-domain
gtk/: configscript.py  gui.py  guiutil.py  netentry.py  prefs.py  wicd-client.py
in/: init=plamo=wicd.in  man=nl=wicd-manager-settings.conf.5.in  man=nl=wicd.8.in  man=wicd-manager-settings.conf.5.in
other/: wicd.service
po/: gl.po
src/wicd/: __init__.py  autoconnect.py  commandline.py  config.py  configmanager.py  daemon.py  dbus.py  errors.py  log.py  misc.py  networking.py  pkg_helpers.py  tools.py  utils.py  wnettools.py
tests/wicd/: __init__.py  config.py
wicd/: autoconnect.py  backend.py  configmanager.py  misc.py  monitor.py  networking.py  setup.py  suspend.py  wicd-daemon.py  wnettools.py
wicd/curses/: curses_misc.py  prefs_curses.py
wicd/data/: wicd.ui
wicd/in/: man=wicd.8.in
(+20 files in other folders)
