[metadata]
name = wicd
version = 1.8.0.dev1

[options]
packages = find:
package_dir =
    =src
    
[install]
record = install.log
[bdist_rpm]
group = Productivity/Networking/System

[options.packages.find]
where = src

[options.package_data]
wicd.daemon = files/*
wicd.frontends.gtk = resources/*

[options.entry_points]
console_scripts = 
    wicd        = wicd.daemon.__main__:main
    wicd-cli    = wicd.frontends.cli:main
    wicd-gtk    = wicd.frontends.gtk.__main__:main
wicd.backends =
    external = wicd.backends.external
    ioctl    = wicd.backends.ioctl

